src/objects/fferpcore__SubscriptionMessageType__c.object
<CustomObject>
    <fields>
        <fullName>fferpcore__MessageType__c</fullName>
        <label>Message Type</label>
        <referenceTo>fferpcore__MessageType__c</referenceTo>
        <relationshipLabel>Subscription Message Types</relationshipLabel>
        <relationshipName>SubscriptionMessageTypes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>fferpcore__MessagingSubscription__c</referenceTo>
        <relationshipLabel>Subscription Message Types</relationshipLabel>
        <relationshipName>SubscriptionMessageTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Subscription Message Type</label>
    <nameField>
        <displayFormat>SMT-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Message Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>